Fixed getOffsetParent in IE8, which is caused by the fact that when an element has its display set to 'none', elm.offsetParent returns the document.body rather than null, which is what it should return according to spec. I work around this issue by checking for this case. Unit test has been added.

--- a/test/unit/fixtures/position.html
+++ b/test/unit/fixtures/position.html
@@ -6,4 +6,5 @@
     <div style="height:10px;font-size:2px">test<span id="inline">test</span></div>
     <div id="absolute_relative_undefined"> </div>
   </div>
+  <div id="hidden_element" style="display: none;"></div>
 </div>
